{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "GameActions",
            "id": "b15c5219-0469-417b-ae7e-0c95a40cef89",
            "actions": [
                {
                    "name": "ScrollAction",
                    "type": "Value",
                    "id": "f2e87b03-ecac-48ab-b0cc-c14269592232",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6c6aa9a3-a406-4e36-af3e-5a7a76b094f9",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}